--- a/ansible/beginners/notes/loops.yml
+++ b/ansible/beginners/notes/loops.yml
@@ -3,7 +3,7 @@
   hosts: all
   # gather_facts: True
 
-  var:
+  vars:
     test:
       - test1
       - test2
@@ -30,3 +30,10 @@
         - { name: vladimir, key: mykey}
         - { name: test1, key: mykey1}
         - { name: test2, key: mykey2}
+
+    - name: 'Test nested loops with list of lists'
+      debug:
+        msg: "This is name: {{ item[0] }} and key: {{ item[1] }}"
+      with_items:
+        - [ 'alice', 'bob' ]
+        - [ 'clientdb', 'employeedb', 'providerdb' ]
