--- a/ansible/beginners/notes/roles_topic/roles/requirements.yml
+++ b/ansible/beginners/notes/roles_topic/roles/requirements.yml
@@ -1,3 +1,3 @@
-- src: git@git.homecredit.net:germanov/httpd_test.git
+- src: https://git.homecredit.net/germanov/httpd_test.git
   scm: git
   version: "master"
