change ansible docker compose

--- a/ansible/beginners/lab/docker-compose-ansible-lab.yml
+++ b/ansible/beginners/lab/docker-compose-ansible-lab.yml
@@ -16,6 +16,7 @@ services:
       - /etc/ansible/hosts:/etc/ansible/hosts
       - /etc/ansible/ansible.cfg:/etc/ansible/ansible.cfg
       - /etc/hosts:/etc/hosts
+      - ../notes:/root/ansible
     cap_add:
       - SYS_ADMIN
   server01:
