--- a/ansible/beginners/lab/docker-compose-ansible-lab.yml
+++ b/ansible/beginners/lab/docker-compose-ansible-lab.yml
@@ -13,10 +13,11 @@ services:
       - /root/.ssh/id_rsa:/root/.ssh/id_rsa:ro
       - /root/.ssh/id_rsa.pub:/root/.ssh/id_rsa.pub:ro
       - /root/.ssh/authorized_keys:/root/.ssh/authorized_keys:ro
+      - /root/.vimrc:/root/.vimrc
       - /etc/ansible/hosts:/etc/ansible/hosts
       - /etc/ansible/ansible.cfg:/etc/ansible/ansible.cfg
       - /etc/hosts:/etc/hosts
-      - ../notes:/root/ansible
+      - ../notes:/root/ansible_beginners/notes
     cap_add:
       - SYS_ADMIN
   server01:
