brno 07.06 fix errors 2nd play

--- a/ansible/beginners/notes/demos/second_play.yml
+++ b/ansible/beginners/notes/demos/second_play.yml
@@ -64,6 +64,6 @@
 
     - name: "8. debug"
       debug:
-        var: "{{ debug_var }}"
+        var: debug_var
       vars:
         debug_var: "Hello EIT Ansible"
