brno 07.06 - var pre

--- a/ansible/beginners/notes/demos/variables_play.yml
+++ b/ansible/beginners/notes/demos/variables_play.yml
@@ -16,6 +16,8 @@
     - name: "Print of test2"
       debug:
         var: test2
+      vars:
+        test2: 2test
 
     - name: "Print of test3"
       debug:
