brno 07.07 variable facts

--- a/ansible/beginners/notes/demos/variables_play.yml
+++ b/ansible/beginners/notes/demos/variables_play.yml
@@ -1,7 +1,7 @@
 ---
 - name: "testing variables"
   hosts: all
-  gather_facts: False
+  # gather_facts: False
 
   vars:
     test1: "This is a test1 variable"
