--- a/ansible/beginners/notes/demos/variables_play.yml
+++ b/ansible/beginners/notes/demos/variables_play.yml
@@ -33,4 +33,5 @@
 
     - name: "Print of test4"
       debug:
-        msg: "{{ test4.red }}"
+        msg: "{{ item }}"
+      with_items: "{{ test4 }}"
