add install httpd task

--- a/ansible/beginners/notes/demos/roles/httpd.eit/tasks/main.yml
+++ b/ansible/beginners/notes/demos/roles/httpd.eit/tasks/main.yml
@@ -1,3 +1,7 @@
 ---
-- name: "Ping"
-  ping:
+- name: "Install httpd"
+  yum:
+    name: "{{ item }}"
+    state: installed
+  with_items:
+    - "{{ packages }}"
