add start of httpd task

--- a/ansible/beginners/notes/demos/roles/httpd.eit/tasks/main.yml
+++ b/ansible/beginners/notes/demos/roles/httpd.eit/tasks/main.yml
@@ -5,3 +5,8 @@
     state: installed
   with_items:
     - "{{ packages }}"
+
+- name: "Start httpd"
+  service:
+    name: httpd
+    state: started
