--- a/ansible/beginners/notes/demos/roles/httpd.eit/defaults/main.yml
+++ b/ansible/beginners/notes/demos/roles/httpd.eit/defaults/main.yml
@@ -8,3 +8,5 @@ ip_addr_virt_host: "{{ ansible_default_ipv4.address }}"
 ip_addr_virt_port: 80
 httpd_server_admin: webmasters@embedit.cz
 httpd_document_root: /var/www/html
+
+welcome_message: "Ansible Brno 07-08.06 course"
